--- a/index.html
+++ b/index.html
@@ -8,303 +8,121 @@
 <link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
 
 <style>
-body {
-  margin: 0;
-  background: #080607;
-  color: #f2f2f2;
-  font-family: Arial, sans-serif;
-  overflow-x: hidden;
+
+/* ===== BASE ===== */
+body{
+margin:0;
+background:#080607;
+color:white;
+font-family:'Eater',cursive;
+overflow-x:hidden;
 }
 
-/* ================= HAND DRAWN STITCH ================= */
-
-.stitch-top,
-.stitch-bottom {
-  position: relative;
-  height: 28px;
-  background: #080607;
+/* ===== SIDEBAR ===== */
+.sidebar{
+position:fixed;
+left:0;
+top:0;
+height:100vh;
+width:90px;
+background:#080607;
+display:flex;
+flex-direction:column;
+align-items:center;
+padding-top:20px;
+z-index:2;
 }
 
-.stitch-top::before,
-.stitch-bottom::before {
-  content: "";
-  position: absolute;
-  top: 14px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #f2f2f2;
-  transform: rotate(-0.4deg);
-  opacity: 0.9;
+/* stitching on sidebar */
+.sidebar::after{
+content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
+writing-mode:vertical-rl;
+text-orientation:upright;
+position:absolute;
+right:-8px;
+top:0;
+height:100%;
+color:white;
+opacity:0.6;
+pointer-events:none;
 }
 
-.stitch-top::after,
-.stitch-bottom::after {
-  content: "";
-  position: absolute;
-  top: 4px;
-  left: 0;
-  width: 100%;
-  height: 20px;
-  background: repeating-linear-gradient(
-    to right,
-    transparent 0px,
-    transparent 30px,
-    #f2f2f2 30px,
-    #f2f2f2 32px
-  );
-  opacity: 0.9;
+/* search bar */
+.search{
+margin-top:25px;
+width:65px;
+padding:6px;
+background:#1a1413;
+border:1px solid white;
+color:white;
+outline:none;
+font-size:10px;
+text-align:center;
+z-index:3;
 }
 
-.stitch-bottom {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+.search::placeholder{
+color:#cfcfcf;
+opacity:0.7;
 }
 
-/* ================= HEADER ================= */
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 30px;
+/* ===== HEADER ===== */
+header{
+text-align:center;
+padding:40px 0;
+font-size:50px;
 }
 
-.logo img {
-  height: 85px;
-  width: auto;
-  display: block;
+/* ===== PRODUCT SECTION ===== */
+.container{
+margin-left:90px;
+display:flex;
+justify-content:center;
+gap:40px;
+padding:40px;
 }
 
-.icons {
-  display: flex;
-  gap: 20px;
-  align-items: center;
+/* product placeholder boxes */
+.box{
+width:250px;
+height:320px;
+background:#1a1413; /* lighter than background */
+border:1px solid white;
+display:flex;
+align-items:center;
+justify-content:center;
+position:relative;
+color:#888;
+font-size:14px;
 }
 
-.hamburger {
-  font-size: 26px;
-  cursor: pointer;
+/* bottom stitching on boxes */
+.box::after{
+content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
+position:absolute;
+bottom:-10px;
+left:0;
+width:100%;
+text-align:center;
+color:white;
+opacity:0.6;
+pointer-events:none;
 }
 
-.heart {
-  font-size: 22px;
-  cursor: pointer;
-}
-
-.bag {
-  width: 22px;
-  height: 22px;
-  border: 2px solid #f2f2f2;
-  border-radius: 3px;
-  position: relative;
-  cursor: pointer;
-}
-
-.bag::before {
-  content: '';
-  position: absolute;
-  width: 12px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-bottom: none;
-  border-radius: 8px 8px 0 0;
-  top: -8px;
-  left: 3px;
-}
-
-/* ================= OVERLAY ================= */
-
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.4);
-  display: none;
-  z-index: 90;
-}
-
-.overlay.active {
-  display: block;
-}
-
-/* ================= SIDEBAR ================= */
-
-.sidebar {
-  position: fixed;
-  left: -280px;
-  top: 0;
-  width: 260px;
-  height: 100%;
-  background: #080607;
-  padding: 30px 20px;
-  transition: left 0.4s ease;
-  z-index: 100;
-  box-sizing: border-box;
-}
-
-.sidebar::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 14px;
-  width: 2px;
-  height: 100%;
-  background: #f2f2f2;
-}
-
-.sidebar::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 28px;
-  height: 100%;
-  background: repeating-linear-gradient(
-    to bottom,
-    transparent 0px,
-    transparent 30px,
-    #f2f2f2 30px,
-    #f2f2f2 32px
-  );
-}
-
-.sidebar.active {
-  left: 0;
-}
-
-.sidebar .close {
-  font-size: 26px;
-  cursor: pointer;
-  margin-bottom: 20px;
-}
-
-.sidebar input {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 30px;
-  background: #080607;
-  border: 1px solid #333;
-  color: #f2f2f2;
-}
-
-.sidebar a {
-  display: block;
-  padding: 12px 0;
-  text-decoration: none;
-  color: #f2f2f2;
-  letter-spacing: 2px;
-  border-bottom: 1px solid #f2f2f2;
-}
-
-/* ================= CONTENT ================= */
-
-.static-hero {
-  height: 70vh;
-  background: #080607;
-}
-
-.counter {
-  text-align: center;
-  padding: 20px;
-  letter-spacing: 2px;
-}
-
-.hero {
-  position: relative;
-  height: 50vh;
-  width: 80%;
-  margin: 40px auto 120px auto;
-  overflow: hidden;
-}
-
-.slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #080607;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.slide.active {
-  opacity: 1;
-}
-
-/* ================= FOOTER ================= */
-
-.main-footer {
-  padding: 40px 20px 120px 40px;
-}
-
-.main-footer a,
-.main-footer .label {
-  display: block;
-  margin: 12px 0;
-  color: #f2f2f2;
-  text-decoration: underline;
-  letter-spacing: 2px;
-}
 </style>
 </head>
-
 <body>
 
-<div class="stitch-top"></div>
-
-<header>
-  <div class="hamburger" onclick="openMenu()">☰</div>
-  <div class="logo">
-    <img src="unnamed.png" alt="Logo">
-  </div>
-  <div class="icons">
-    <div class="heart">♡</div>
-    <div class="bag"></div>
-  </div>
-</header>
-
-<div class="overlay" id="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">☰</div>
-  <input type="text" placeholder="Search...">
-  <a href="#">Skirts</a>
-  <a href="#">Shorts</a>
-  <a href="#">Tops</a>
-  <a href="#">Accessories</a>
+<div class="sidebar">
+<input type="text" class="search" placeholder="search">
 </div>
 
-<section class="static-hero"></section>
+<header>GNAW</header>
 
-<div class="counter">
-  <span id="count">247</span> pieces saved from landfills
+<div class="container">
+<div class="box">image placeholder</div>
+<div class="box">image placeholder</div>
 </div>
-
-<section class="hero">
-  <div class="slide active"></div>
-  <div class="slide"></div>
-  <div class="slide"></div>
-</section>
-
-<div class="main-footer">
-  <a href="about.html">About Us</a>
-  <a href="#">Contact</a>
-  <a href="#">FAQ</a>
-</div>
-
-<div class="stitch-bottom"></div>
-
-<script>
-function openMenu() {
-  document.getElementById("sidebar").classList.add("active");
-  document.getElementById("overlay").classList.add("active");
-}
-
-function closeMenu() {
-  document.getElementById("sidebar").classList.remove("active");
-  document.getElementById("overlay").classList.remove("active");
-}
-</script>
 
 </body>
 </html>
