--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ position:fixed;
 left:0;
 top:0;
 height:100vh;
-width:90px;
+width:80px;
 background:#080607;
 display:flex;
 flex-direction:column;
@@ -33,13 +33,13 @@ padding-top:20px;
 z-index:2;
 }
 
-/* stitching on sidebar */
+/* stitching */
 .sidebar::after{
 content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
 writing-mode:vertical-rl;
 text-orientation:upright;
 position:absolute;
-right:-8px;
+right:-14px;
 top:0;
 height:100%;
 color:white;
@@ -47,23 +47,32 @@ opacity:0.6;
 pointer-events:none;
 }
 
-/* search bar */
+/* search */
 .search{
-margin-top:25px;
-width:65px;
+margin-top:20px;
+width:60px;
 padding:6px;
-background:#1a1413;
+background:transparent;
 border:1px solid white;
 color:white;
 outline:none;
 font-size:10px;
 text-align:center;
-z-index:3;
 }
 
-.search::placeholder{
-color:#cfcfcf;
-opacity:0.7;
+/* instagram icon */
+.instagram{
+margin-top:auto;
+margin-bottom:20px;
+width:22px;
+height:22px;
+cursor:pointer;
+}
+
+.instagram svg{
+fill:white;
+width:100%;
+height:100%;
 }
 
 /* ===== HEADER ===== */
@@ -73,34 +82,29 @@ padding:40px 0;
 font-size:50px;
 }
 
-/* ===== PRODUCT SECTION ===== */
+/* ===== PRODUCT BOXES ===== */
 .container{
-margin-left:90px;
+margin-left:100px;
 display:flex;
 justify-content:center;
 gap:40px;
 padding:40px;
 }
 
-/* product placeholder boxes */
 .box{
 width:250px;
 height:320px;
-background:#1a1413; /* lighter than background */
 border:1px solid white;
 display:flex;
 align-items:center;
 justify-content:center;
 position:relative;
-color:#888;
-font-size:14px;
 }
 
-/* bottom stitching on boxes */
 .box::after{
-content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
+content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
 position:absolute;
-bottom:-10px;
+bottom:-18px;
 left:0;
 width:100%;
 text-align:center;
@@ -115,13 +119,20 @@ pointer-events:none;
 
 <div class="sidebar">
 <input type="text" class="search" placeholder="search">
+
+<div class="instagram">
+<svg viewBox="0 0 24 24">
+<path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm5 5.2A4.8 4.8 0 1 1 7.2 12 4.8 4.8 0 0 1 12 7.2zm6.3-.9a1.1 1.1 0 1 1-1.1 1.1 1.1 1.1 0 0 1 1.1-1.1zM12 9a3 3 0 1 0 3 3 3 3 0 0 0-3-3z"/>
+</svg>
+</div>
+
 </div>
 
 <header>GNAW</header>
 
 <div class="container">
-<div class="box">image placeholder</div>
-<div class="box">image placeholder</div>
+<div class="box">ITEM 1</div>
+<div class="box">ITEM 2</div>
 </div>
 
 </body>
