--- a/index.html
+++ b/index.html
@@ -16,26 +16,41 @@ font-family:Arial,sans-serif;
 overflow-x:hidden;
 }
 
-/* ================= |-|-|- STITCH ================= */
+/* ================= CLEAN STITCH ================= */
 
 .stitch-top,
 .stitch-bottom{
 position:relative;
-height:28px;
+height:40px;
 background:#080607;
-overflow:hidden;
 }
 
 .stitch-top::before,
 .stitch-bottom::before{
-content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
+content:"";
 position:absolute;
-top:4px;
-left:-40px;
-white-space:nowrap;
-color:#f2f2f2;
-font-size:18px;
-letter-spacing:6px;
+top:20px;
+left:0;
+width:100%;
+height:2px;
+background:#f2f2f2;
+}
+
+.stitch-top::after,
+.stitch-bottom::after{
+content:"";
+position:absolute;
+top:6px;
+left:0;
+width:100%;
+height:28px;
+background:repeating-linear-gradient(
+to right,
+transparent 0px,
+transparent 45px,
+#f2f2f2 45px,
+#f2f2f2 47px
+);
 }
 
 .stitch-bottom{
@@ -136,13 +151,19 @@ background:#f2f2f2;
 }
 
 .sidebar::after{
-content:"|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-";
+content:"";
 position:absolute;
-top:10px;
-right:-4px;
-writing-mode:vertical-rl;
-color:#f2f2f2;
-letter-spacing:4px;
+top:0;
+right:0;
+width:28px;
+height:100%;
+background:repeating-linear-gradient(
+to bottom,
+transparent 0px,
+transparent 45px,
+#f2f2f2 45px,
+#f2f2f2 47px
+);
 }
 
 .sidebar.active{
@@ -190,7 +211,7 @@ letter-spacing:2px;
 position:relative;
 height:50vh;
 width:80%;
-margin:40px auto;
+margin:40px auto 120px auto;
 overflow:hidden;
 }
 
@@ -207,23 +228,6 @@ transition:opacity 1.5s ease-in-out;
 opacity:1;
 }
 
-/* ================= PRODUCTS ================= */
-
-.products{
-display:flex;
-justify-content:center;
-gap:40px;
-width:80%;
-margin:60px auto 140px auto;
-}
-
-.product-box{
-width:260px;
-height:340px;
-border:1px solid #f2f2f2;
-background:#111;
-}
-
 /* ================= FOOTER ================= */
 
 .main-footer{
@@ -236,19 +240,6 @@ margin:12px 0;
 color:#f2f2f2;
 text-decoration:underline;
 letter-spacing:2px;
-}
-
-.instagram{
-margin-top:20px;
-width:22px;
-height:22px;
-cursor:pointer;
-}
-
-.instagram svg{
-fill:#f2f2f2;
-width:100%;
-height:100%;
 }
 </style>
 </head>
@@ -291,22 +282,10 @@ height:100%;
 <div class="slide"></div>
 </section>
 
-<section class="products">
-<div class="product-box"></div>
-<div class="product-box"></div>
-</section>
-
 <div class="main-footer">
 <a href="about.html">About Us</a>
 <a href="#">Contact</a>
 <a href="#">FAQ</a>
-
-<div class="instagram">
-<svg viewBox="0 0 24 24">
-<path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm5 5.2A4.8 4.8 0 1 1 7.2 12 4.8 4.8 0 0 1 12 7.2zm6.3-.9a1.1 1.1 0 1 1-1.1 1.1 1.1 1.1 0 0 1 1.1-1.1zM12 9a3 3 0 1 0 3 3 3 3 0 0 0-3-3z"/>
-</svg>
-</div>
-
 </div>
 
 <div class="stitch-bottom"></div>
